objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>StudentCourse__c</fullName>
        <label>StudentCourse</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Computer Science Engineering</fullName>
                    <default>true</default>
                    <label>Computer Science Engineering</label>
                </value>
                <value>
                    <fullName>Electrical &amp; Electronics Engineering</fullName>
                </value>
                <value>
                    <fullName>Electronics &amp; Communication Engineering</fullName>
                </value>
                <value>
                    <fullName>Information Technology Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudentEamil__c</fullName>
        <label>StudentEamil</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>StudentFee__c</fullName>
        <label>StudentFee</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StudentLastName__c</fullName>
        <label>StudentLastName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Texter__c</fullName>
        <label>Student_Texter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>